Fixed email-only card help text overlapping card border
no issue

- negative margin was pulling the card border up too far and causing it to run behind the grey help block

--- a/ghost/admin/app/styles/components/koenig.css
+++ b/ghost/admin/app/styles/components/koenig.css
@@ -928,7 +928,7 @@
 
 .kg-card-help {
     background: color-mod(var(--whitegrey) l(+3%));
-    margin: 12px -13px -9px;
+    margin: 12px -13px -1px;
     padding: 6px;
 }
 
